[gd_scene load_steps=4 format=3 uid="uid://ct74nnhbfhyi0"]

[ext_resource type="Script" uid="uid://dcfwirurxorau" path="res://opportunity_knocks_card.gd" id="1_umw4a"]
[ext_resource type="Texture2D" uid="uid://417x86cg62u0" path="res://thumbnail_special tile.png" id="2_veil4"]
[ext_resource type="Theme" uid="uid://5mbaoxawpglr" path="res://Settings menu/panel.tres" id="3_fby1o"]

[node name="Oppo Knocks Card" type="Node2D"]
script = ExtResource("1_umw4a")
type = 2

[node name="base_card_sprite" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(1.32099, 1.09864)
texture = ExtResource("2_veil4")

[node name="oppo_knocks_display" type="Node2D" parent="."]

[node name="ok_title" type="Label" parent="oppo_knocks_display"]
offset_left = -91.0
offset_top = -142.0
offset_right = 86.0
offset_bottom = -118.0
theme = ExtResource("3_fby1o")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Opportunity Knocks"
metadata/_edit_use_anchors_ = true

[node name="des_lbl" type="Label" parent="oppo_knocks_display"]
offset_left = -84.0
offset_top = -89.0
offset_right = 81.0
offset_bottom = 81.0
theme = ExtResource("3_fby1o")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "des"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="close_btn" type="Button" parent="oppo_knocks_display"]
offset_left = -22.0
offset_top = 119.0
offset_right = 26.0
offset_bottom = 150.0
text = "close
"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="oppo_knocks_display/close_btn" to="." method="_on_close_btn_pressed"]
